Modified and someclasses are added

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\ABHAY SHARMA\AppData\Local\Temp\testng-eclipse--440342759\testng-customsuite.xml</span>
+                    <span>C:\Users\ABHAY SHARMA\AppData\Local\Temp\testng-eclipse-1688054629\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="calc_test.calc_maintest" class="method navigator-link" hash-for-method="calculator_actions">calculator_actions</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="calc_test.calc_maintest" class="method navigator-link" hash-for-method="calculator_actions({Choice=datecalculation, Length_num=null, Month2=null, Num2=null, Numofunit=null, Operation=null, Un...)">calculator_actions({Choice=datecalculation, Length_num=null, Month2=null, Num2=null, Numofunit=null, Operation=null, Un...)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,9 +125,10 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="calculator_actions">
-                  </a> <!-- calculator_actions -->
+                  <a name="calculator_actions({Choice=datecalculation, Length_num=null, Month2=null, Num2=null, Numofunit=null, Operation=null, Un...)">
+                  </a> <!-- calculator_actions({Choice=datecalculation, Length_num=null, Month2=null, Num2=null, Numofunit=null, Operation=null, Un...) -->
                   <span class="method-name">calculator_actions</span>
+                  <span class="parameters">({Choice=datecalculation, Length_num=null, Month2=null, Num2=null, Numofunit=null, Operation=null, Unit=null, Flag=Yes, Test_case=TC04, Num1=null, Date=31, Function=Date, Month=March, Year=2024})</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\ABHAY SHARMA\AppData\Local\Temp\testng-eclipse--440342759\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\ABHAY SHARMA\AppData\Local\Temp\testng-eclipse-1688054629\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -188,12 +189,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'calculator_actions')
 data.setCell(0, 2, 'calc_test.calc_maintest')
-data.setCell(0, 3, 16113);
+data.setCell(0, 3, 23928);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 16 seconds</span>
+              <span class="suite-total-time">Total running time: 23 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -225,12 +226,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">calculator_actions</span>
-                <span class="method-start">2282 ms</span>
+                <span class="method-name">calculator_actions({Choice=datecalculation, Length_num=null, Month2=null, Num2=null, Numofunit=null, Operation=null, Un...)</span>
+                <span class="method-start">1384 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">close_app</span>
-                <span class="method-start">18398 ms</span>
+                <span class="method-start">25317 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
