--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">18,460</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">26,316</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">calc_test.calc_maintest</td><td><a href="#m0">calculator_actions</a></td><td rowspan="1">1658995221043</td><td rowspan="1">16113</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">calc_test.calc_maintest</td><td><a href="#m0">calculator_actions</a></td><td rowspan="1">1659208137066</td><td rowspan="1">23928</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">calc_test.calc_maintest#calculator_actions</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">calc_test.calc_maintest#calculator_actions</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{Choice=datecalculation, Length_num=null, Month2=null, Num2=null, Numofunit=null, Operation=null, Unit=null, Flag=Yes, Test_case=TC04, Num1=null, Date=31, Function=Date, Month=March, Year=2024}</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
