--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bb7c74">  <td>22/07/28 13:30:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base_test.launch_applictaion()[pri:0, instance:calc_test.calc_maintest@3246fb96]">&gt;&gt;launch_applictaion</td> 
-<td>&nbsp;</td>  <td>main@1292838001</td>   <td></td> </tr>
-<tr bgcolor="948bbd">  <td>22/07/28 13:30:21</td>   <td>2280</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="calc_maintest.calculator_actions()[pri:0, instance:calc_test.calc_maintest@3246fb96]">calculator_actions</td> 
-  <td>main@1292838001</td>   <td></td> </tr>
-<tr bgcolor="bb7c74">  <td>22/07/28 13:30:37</td>   <td>18396</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base_test.close_app()[pri:0, instance:calc_test.calc_maintest@3246fb96]">&lt;&lt;close_app</td> 
-<td>&nbsp;</td>  <td>main@1292838001</td>   <td></td> </tr>
+<tr bgcolor="7194ba">  <td>22/07/31 00:38:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base_test.launch_applictaion()[pri:0, instance:calc_test.calc_maintest@e7edb54]">&gt;&gt;launch_applictaion</td> 
+<td>&nbsp;</td>  <td>main@1628998132</td>   <td></td> </tr>
+<tr bgcolor="ccb269">  <td>22/07/31 00:38:57</td>   <td>1382</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="calc_maintest.calculator_actions(java.util.Map)[pri:0, instance:calc_test.calc_maintest@e7edb54]">calculator_actions</td> 
+  <td>main@1628998132</td>   <td></td> </tr>
+<tr bgcolor="7194ba">  <td>22/07/31 00:39:20</td>   <td>25315</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base_test.close_app()[pri:0, instance:calc_test.calc_maintest@e7edb54]">&lt;&lt;close_app</td> 
+<td>&nbsp;</td>  <td>main@1628998132</td>   <td></td> </tr>
 </table>
